--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+
+body{
+  background-color: black;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imageclass{
+  background-image: url("../public/coverphoto.jpg");
+  height: 500px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchbar{
+  height: 50px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-box{
+  background-color: black;
+  border: 1px solid;
+  height: 30px;
+  border-radius: 60px;
+  border-color: gray;
+  padding-left: 10px;
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  width: 40%;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.icon {
+  color: #EAFAF1;
+  width: 40px;
+  height: 28px;
+  background-color: #58D68D;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-radius: 0px 60px 60px 0px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  margin-left: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  border: none;
+  outline: none;
+  padding: 0 10px;
+  background: none;
+  font-size: 12px;
+  font-family:sans-serif;
+  color: #fff;
+  height: 30px;
+  margin-top: -2px;
 }
